Bug 1855200 - [devtools] Fix and harmonize focus indicator across the toolbox. r=devtools-reviewers,ochameau.
The new focus indicator is bigger and has a better contrast, making it more accessible
than the thin dotted line we had previously.
It also includes a white box-shadow so even on our blue "active/selected" backgrounds,
the indicator is still visible (e.g. in the markup view, for a selected node, with
focus on badges / text inputs).

Finally, I tried to go over the elements of the shared components and most used
panels to adjust the outline offset when it was not visible/clipped, or when
it could be conflated with the focused element border/background.

Differential Revision: https://phabricator.services.mozilla.com/D192185

UltraBlame original commit: d5797f4f8581b9020bc6c81262f2402c9fe265a0

--- a/devtools/client/debugger/src/components/PrimaryPanes/OutlineFilter.css
+++ b/devtools/client/debugger/src/components/PrimaryPanes/OutlineFilter.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 .outline-filter {
   border: 1px solid var(--theme-splitter-color);
@@ -14,17 +14,10 @@
   color: var(--theme-body-color);
   font-size: inherit;
   user-select: text;
-}
-
-.outline-filter-input.focused {
-  border: 1px solid var(--theme-highlight-blue);
+  outline-offset: -2px;
 }
 
 .outline-filter-input::placeholder {
   color: var(--theme-text-color-alt);
   opacity: 1;
-}
-
-.theme-dark .outline-filter-input.focused {
-  border: 1px solid var(--blue-50);
 }
