--- a/devtools/client/debugger/src/components/SecondaryPanes/EventListeners.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/EventListeners.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
 .event-listeners-content {
   padding-block: 4px;
@@ -30,6 +30,7 @@
   background: none;
   padding: 4px 5px;
   line-height: 12px;
+  outline-offset: -2px;
 }
 
 .event-listener-expand:hover {
@@ -109,7 +110,6 @@
   font-size: inherit;
   background-color: var(--theme-sidebar-background);
   border: 0;
-  outline: 0;
   height: 24px;
   color: var(--theme-body-color);
   background-image: url("chrome://devtools/skin/images/filter-small.svg");
@@ -120,12 +120,13 @@
   -moz-context-properties: fill;
   fill: var(--theme-icon-dimmed-color);
   text-align: match-parent;
+  outline-offset: -1px;
 }
 
 :root:dir(ltr) .event-search-input {
-  
-
-
+  /* Be explicit about left/right direction to prevent the text/placeholder
+   * from overlapping the background image when the user changes the text
+   * direction manually (e.g. via Ctrl+Shift). */
   padding-left: 19px;
   padding-right: 12px;
 }
