--- a/devtools/client/debugger/src/components/shared/Button/styles/CloseButton.css
+++ b/devtools/client/debugger/src/components/shared/Button/styles/CloseButton.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
 .close-btn {
   width: 16px;
@@ -11,8 +11,7 @@
   color: var(--theme-icon-color);
 }
 
-.close-btn:hover,
-.close-btn:focus {
+.close-btn:hover {
   color: var(--theme-selection-color);
   background-color: var(--theme-selection-background);
 }
@@ -21,7 +20,7 @@
   display: block;
   width: 12px;
   height: 12px;
-  
+  /* inherit the button's text color for the icon's color */
   background-color: currentColor;
 }
 
