--- a/devtools/client/themes/layout.css
+++ b/devtools/client/themes/layout.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
  :root {
   --flex-basis-outline-border-color: var(--blue-40);
@@ -36,9 +36,9 @@
   overflow: hidden;
 }
 
-
-
-
+/**
+ * Common styles for the layout container
+ */
 
 .layout-content ul {
   list-style: none;
@@ -77,7 +77,7 @@
   display: none;
 }
 
-
+/* Layout Properties: Common styles used for the Box Model and Flexbox Properties */
 
 .layout-properties-header {
   font-size: 12px;
@@ -110,18 +110,18 @@
   display: block;
 }
 
-
-
-
+/**
+ * Flex Container
+ */
 
 #layout-flexbox-container {
   display: flex;
   flex-direction: column;
 }
 
-
-
-
+/**
+ * Header
+ */
 
 .flex-header {
   display: flex;
@@ -186,9 +186,9 @@ html[dir="rtl"] .flex-header-button-prev::before {
   padding: 3px 0;
 }
 
-
-
-
+/**
+ * Flex Item List
+ */
 
 .flex-item-list {
   font-size: 12px;
@@ -215,6 +215,7 @@ html[dir="rtl"] .flex-header-button-prev::before {
   margin: 0;
   padding-inline: 28px 16px;
   position: relative;
+  outline-offset: -2px;
 }
 
 .flex-item-list .devtools-button::after {
@@ -248,26 +249,26 @@ html[dir="rtl"] .flex-item-list .devtools-button::after {
   vertical-align: middle;
 }
 
-
-
-
+/**
+ * Flex Item Selector
+ */
 
 #flex-item-selector {
   cursor: pointer;
   font-size: 12px;
 }
 
-
-
-
+/**
+ * Flex Item Sizing Outline
+ */
 
 .flex-outline-container {
   display: flex;
   justify-content: center;
-  
-
-
-
+  /* The flex outline is always drawn in ltr. Whether the UI of DevTools is in RTL or some
+     other writing mode doesn't have an impact on whether the outline should face left,
+     right, top or bottom. This should only be dictated by which direction does the flex
+     item currently face in the page. */
   direction: ltr;
 }
 
@@ -280,10 +281,10 @@ html[dir="rtl"] .flex-item-list .devtools-button::after {
 }
 
 .flex-outline > * {
-  
-
-
-
+  /* To make sure very small distances on the outline still have enough room to be
+     represented and to avoid overlapping labels, we make sure each grid item is at least
+     10px wide. This might sometimes render the outline in a different way than the item
+     but the information shown will still be correct, and will be more easily visible */
   min-width: 10px;
 }
 
@@ -327,8 +328,8 @@ html[dir="rtl"] .flex-item-list .devtools-button::after {
   position: absolute;
   right: -10px;
   top: 6px;
-  
-
+  /* Making sure the icon is visible against any background by creating a plain background
+     around its shape, using a drop-shadow filter. */
   filter:
     drop-shadow(1px 0px 0px var(--theme-body-background))
     drop-shadow(0px 1px 0px var(--theme-body-background))
@@ -351,9 +352,9 @@ html[dir="rtl"] .flex-item-list .devtools-button::after {
   grid-column: basis-start / basis-end;
 }
 
-
-
-
+/* Fills the basis outline with a blue background color that is contained inside the
+   dotted border. This gives the impression the dotted border alternates between
+   white and blue. */
 .flex-outline-basis::before {
   content: "";
   position: absolute;
@@ -561,9 +562,9 @@ html[dir="rtl"] .flex-item-list .devtools-button::after {
   transform: rotate(.5turn);
 }
 
-
-
-
+/**
+ * Flex Item Sizing Properties
+ */
 
 .flex-item-sizing {
   margin: 0;
@@ -629,9 +630,9 @@ html[dir="rtl"] .flex-item-list .devtools-button::after {
   list-style: none;
 }
 
-
-
-
+/**
+ * Grid Container
+ */
 
 #layout-grid-container {
   display: flex;
@@ -666,9 +667,9 @@ html[dir="rtl"] .flex-item-list .devtools-button::after {
   padding-inline-start: 20px;
 }
 
-
-
-
+/**
+ * Grid Content
+ */
 
 .grid-content {
   display: flex;
@@ -677,9 +678,9 @@ html[dir="rtl"] .flex-item-list .devtools-button::after {
   padding: 5px 0;
 }
 
-
-
-
+/**
+ * Grid Outline
+ */
 
 .grid-outline-container {
   margin: 5px;
@@ -727,9 +728,9 @@ html[dir="rtl"] .flex-item-list .devtools-button::after {
   height: 16px;
 }
 
-
-
-
+/**
+ * Settings Item
+ */
 
 .grid-settings-item label {
   line-height: 16px;
